turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:22: error: ';' expected but 'else' found.
				  	else brosse(colors(0)); gauche(); avance()
                                        ^LangtonsAnt:25: error: '}' expected but 'case' found.
		case 'R' => if(pos!=colors.length-1) brosse(colors(pos+1)); droite(); avance();
                ^LangtonsAnt:26: error: ';' expected but 'else' found.
				  else brosse(colors(0)); droite(); avance()
                                  ^LangtonsAnt:28: error: eof expected but '}' found.
}
^